@@ -1,70 +1,0 @@
-// -*- c-basic-offset: 2 -*-
-/*
- *  This file is part of the KDE libraries
- *  Copyright (C) 2005 Apple Computer, Inc.
- *
- *  This library is free software; you can redistribute it and/or
- *  modify it under the terms of the GNU Library General Public
- *  License as published by the Free Software Foundation; either
- *  version 2 of the License, or (at your option) any later version.
- *
- *  This library is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- *  Library General Public License for more details.
- *
- *  You should have received a copy of the GNU Library General Public License
- *  along with this library; see the file COPYING.LIB.  If not, write to
- *  the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
- *  Boston, MA 02110-1301, USA.
- *
- */
-
-
-#ifndef _KJS_POINTER_HASH_H_
-#define _KJS_POINTER_HASH_H_
-
-namespace KJS {
-
-#include <stdint.h>
-
-template <int size> unsigned pointerHash(void *pointer);
-
-// Thomas Wang's 32 bit mix
-// http://www.cris.com/~Ttwang/tech/inthash.htm
-template <> inline unsigned pointerHash<4>(void *pointer) 
-{
-  uint32_t key = reinterpret_cast<uint32_t>(pointer);
-  key += ~(key << 15);
-  key ^= (key >> 10);
-  key += (key << 3);
-  key ^= (key >> 6);
-  key += ~(key << 11);
-  key ^= (key >> 16);
-  return key;
-}
-
-// Thomas Wang's 64 bit mix
-// http://www.cris.com/~Ttwang/tech/inthash.htm
-template <> inline unsigned pointerHash<8>(void *pointer)
-{
-  uint64_t key = reinterpret_cast<uint64_t>(pointer);
-  key += ~(key << 32);
-  key ^= (key >> 22);
-  key += ~(key << 13);
-  key ^= (key >> 8);
-  key += (key << 3);
-  key ^= (key >> 15);
-  key += ~(key << 27);
-  key ^= (key >> 31);
-  return key;
-}
-
-inline unsigned pointerHash(void *p)
-{
-    return pointerHash<sizeof(void *)>(p);
-}
-
-} // namespace KJS
-
-#endif // _KJS_POINTER_HASH_H_
